--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "vant": "^2.10.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
