--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
-# just a flag
-ENV = 'production'
+NODE_ENV='production'
+# must start with VUE_APP_
+VUE_APP_ENV = 'production'
 
 # base api
 VUE_APP_BASE_API = 'http://localhost:3000/'
